--- a/notion.html
+++ b/notion.html
@@ -135,15 +135,17 @@
                 ><span class="blind">앞 페이지로 이동</span></a
               >
               <ol class="notionlist_pagenate">
-                <li class="notinumber"><a href="#">1</a></li>
-                <li class="notinumber"><a href="#">2</a></li>
-                <li class="notinumber"><a href="#">3</a></li>
-                <li class="notinumber">
-                  <a href="#">…</a>
+                <li class="notinumber active">
+                  <a href="javascript:void()">1</a>
                 </li>
-                <li class="notinumber"><a href="#">6</a></li>
+                <li class="notinumber"><a href="javascript:void()">2</a></li>
+                <li class="notinumber"><a href="javascript:void()">3</a></li>
+                <li class="notinumber">
+                  <a href="javascript:void()">4</a>
+                </li>
+                <li class="notinumber"><a href="javascript:void()">5</a></li>
               </ol>
-              <a href="#" class="last"
+              <a href="javascript:void()" class="last"
                 ><span class="blind">뒤 페이지로 이동</span></a
               >
             </div>
