main 이미지, a scrollTop, pagenate 수정

--- a/index.html
+++ b/index.html
@@ -1407,14 +1407,13 @@
                 </a>
               </li>
               <li class="goods_images">
-                <a href="#"
+                <a href="./goodslist.html"
                   ><img
-                    src="./images/main/goods_joohoney.jpg"
-                    alt="만랭이 미니 인형"
+                    src="./images/main/goods_kihyun.jpg"
+                    alt="11월을 담은 순간 티셔츠"
                   />
                   <p class="blind">
-                    주헌(JOOHONEY)[MANRANGYI]OFFICIAL MD-만랭이 미니 인형
-                    MANRANGYI MINI DOLL
+                    기현(KIHYUN) PHOTO EXHIBITION 11월을 담은 순간 - 티셔츠
                   </p>
                 </a>
               </li>
