--- a/itemlist.html
+++ b/itemlist.html
@@ -577,35 +577,27 @@
             <span class="blind">페이지 숫자</span>
             <ol class="numberlist">
               <li class="numberlist_pagenate active">
-                <a href="javascript:void()" title="현재 페이지1">1</a>
+                <a href="#" title="현재 페이지1">1</a>
               </li>
               <li class="numberlist_pagenate">
-                <a href="javascript:void()">2</a>
+                <a href="#">2</a>
               </li>
               <li class="numberlist_pagenate">
-                <a href="javascript:void()">3</a>
+                <a href="#">3</a>
               </li>
               <li class="numberlist_pagenate">
-                <a href="javascript:void()">4</a>
+                <a href="#">4</a>
               </li>
               <li class="numberlist_pagenate">
-                <a href="javascript:void()">5</a>
+                <a href="#">5</a>
               </li>
             </ol>
-            <div class="pagenate">
-              <ul class="pagenate_emog">
-                <li class="pagenate_next">
-                  <a href="javascript:void()" class="nextpage">
-                    <span class="blind">다음 페이지</span>
-                  </a>
-                </li>
-                <li class="pagenate_last">
-                  <a href="javascript:void()" class="lastpage">
-                    <span class="blind">끝 페이지</span>
-                  </a>
-                </li>
-              </ul>
-            </div>
+            <a href="#" class="nextpage">
+              <span class="blind">다음으로 이동</span>
+            </a>
+            <a href="#" class="lastpage">
+              <span class="blind">끝으로 이동</span>
+            </a>
           </div>
         </section>
         <div class="togo_btn">
