--- a/notion.html
+++ b/notion.html
@@ -130,25 +130,25 @@
                 <span class="list_day">2023.09.08</span>
               </li>
             </ul>
-            <div class="notionlst_number">
-              <a href="#" class="first"
-                ><span class="blind">앞 페이지로 이동</span></a
-              >
-              <ol class="notionlist_pagenate">
-                <li class="notinumber active">
-                  <a href="javascript:void()">1</a>
-                </li>
-                <li class="notinumber"><a href="javascript:void()">2</a></li>
-                <li class="notinumber"><a href="javascript:void()">3</a></li>
-                <li class="notinumber">
-                  <a href="javascript:void()">4</a>
-                </li>
-                <li class="notinumber"><a href="javascript:void()">5</a></li>
-              </ol>
-              <a href="javascript:void()" class="last"
-                ><span class="blind">뒤 페이지로 이동</span></a
-              >
-            </div>
+          </div>
+          <div class="notionlst_number">
+            <a href="#" class="fristpage"
+              ><span class="blind">이전으로 이동</span></a
+            >
+            <ol class="notionlist_pagenate">
+              <li class="notinumber active">
+                <a href="#" title="현재 페이지1">1</a>
+              </li>
+              <li class="notinumber"><a href="#">2</a></li>
+              <li class="notinumber"><a href="#">3</a></li>
+              <li class="notinumber">
+                <a href="#">4</a>
+              </li>
+              <li class="notinumber"><a href="#">5</a></li>
+            </ol>
+            <a href="#" class="last_page"
+              ><span class="blind">다음으로 이동</span></a
+            >
           </div>
         </div>
         <div class="togo_btn">
