--- a/index.html
+++ b/index.html
@@ -198,12 +198,12 @@
           // arrows: false,
           gap: "40px",
           start: 0,
-          autoplay: {
-            interval: 250,
-            pauseOnHover: {
-              resetProgress: true,
-            },
-          },
+          // autoplay: {
+          //   interval: 250,
+          //   pauseOnHover: {
+          //     resetProgress: true,
+          //   },
+          // },
         });
 
         splide.mount();
