--- a/index.html
+++ b/index.html
@@ -87,7 +87,8 @@
                   />
                   <div class="slide__txt">
                     <strong
-                      >크래비티(CRAVITY) 6th Mini Album [SUN SEEKER]</strong
+                      >크래비티(CRAVITY)<br />6th Mini Album [SUN
+                      SEEKER]</strong
                     >
                     <p>지금 바로 만나보세요!</p>
                   </div>
@@ -97,7 +98,7 @@
                 <a href="#">
                   <img src="./images/main/main_bnrNCT.jpg" alt="NCT 2023" />
                   <div class="slide__txt">
-                    <strong>엔시티(NCT) 4th Album [Golden Age]</strong>
+                    <strong>엔시티(NCT)<br />4th Album [Golden Age]</strong>
                     <p>앨범 구매시 미공개 포토카드 증정!</p>
                   </div>
                 </a>
@@ -109,7 +110,7 @@
                     alt="KIMSEHEONG"
                   />
                   <div class="slide__txt">
-                    <strong>김세정(KIMSEHEONG) 1st Album [문(門)]</strong>
+                    <strong>김세정(KIMSEHEONG)<br />1st Album [문(門)]</strong>
                     <p>팬사인회 이벤트! 오직 SOUNDWAVE에서만.</p>
                   </div>
                 </a>
@@ -122,7 +123,7 @@
                   />
                   <div class="slide__txt">
                     <strong
-                      >배너(VANNER) 1st Mini Album [VENI VIDI VICI]</strong
+                      >배너(VANNER)<br />1st Mini Album [VENI VIDI VICI]</strong
                     >
                     <p>LUCKY DRAW EVENT 영등포/온라인 한정수량!</p>
                   </div>
@@ -151,7 +152,7 @@
                   />
                   <div class="slide__txt">
                     <strong
-                      >엔믹스(NMIXX) 3rd Single [A Midsummer NMIXX's
+                      >엔믹스(NMIXX) 3rd Single<br />[A Midsummer NMIXX's
                       Dream]</strong
                     >
                     <p>팬사인회 이벤트! 오직 SOUNDWAVE에서만.</p>
@@ -166,7 +167,8 @@
                   />
                   <div class="slide__txt">
                     <strong
-                      >루셈블(Loossemble) 1st Mini Album [Loossemble]</strong
+                      >루셈블(Loossemble)<br />1st Mini Album
+                      [Loossemble]</strong
                     >
                     <p>앨범 구매시 미공개 포토카드 증정!</p>
                   </div>
@@ -180,7 +182,7 @@
                   />
                   <div class="slide__txt">
                     <strong
-                      >피원하모니(P1HARMONY) 6th Mini Album [HARMONY : ALL
+                      >피원하모니(P1HARMONY)<br />6th Mini Album [HARMONY : ALL
                       IN]</strong
                     >
                     <p>VIDEO CALL EVENT! 오직 SOUNDWAVE에서만.</p>
@@ -196,14 +198,14 @@
           type: "loop",
           // perPage: 1,
           // arrows: false,
-          gap: "20px",
+          gap: "40px",
           start: 0,
-          // autoplay: {
-          //   interval: 250,
-          //   pauseOnHover: {
-          //     resetProgress: true,
-          //   },
-          // },
+          autoplay: {
+            interval: 250,
+            pauseOnHover: {
+              resetProgress: true,
+            },
+          },
         });
 
         splide.mount();
