--- a/index.html
+++ b/index.html
@@ -503,23 +503,13 @@
             </div>
             <div class="feed_cont_video">
               <iframe
-                width="100%"
-                height="100%"
                 src="https://www.youtube.com/embed/sGhuwRYp5hM?autoplay=1&mute=1"
                 title="NCT U 엔시티 유 &#39;Baggy Jeans&#39; Performance Video"
                 frameborder="0"
                 allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
                 allowfullscreen
-              ></iframe>
-              <!-- <iframe
-                width="100%"
-                height="100%"
-                src="https://www.youtube.com/embed/ArmDp-zijuc?autoplay=1&mute=1"
-                title="NewJeans (뉴진스) &#39;Super Shy&#39; Official MV"
-                frameborder="0"
-                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
-                allowfullscreen
-              ></iframe> -->
+              >
+              </iframe>
             </div>
           </div>
         </section>
