reser textbox 수정, padding 수정, a Tag JavascriptVoid

--- a/goodslist.html
+++ b/goodslist.html
@@ -69,6 +69,65 @@
       <a href="#main"><span>컨텐츠 바로가기</span></a>
     </div>
     <div class="wrap">
+      <header id="header">
+        <div class="header_bbsbg">
+          <div class="inner header_bbs">
+            <button class="bbs_btn bbs_left">
+              <span class="blind">왼쪽으로 넘기기</span>
+            </button>
+            <p class="header_bbstxt">
+              [공지] PEAK TIME COLLABO CAFE Official MD 배송안내
+              <a href="#" class="bbs_togo">GO</a>
+            </p>
+            <button class="bbs_btn bbs_right">
+              <span class="blind">오른쪽으로 넘기기</span>
+            </button>
+          </div>
+        </div>
+        <div class="inner header_bar">
+          <div class="header_top_util">
+            <ul class="util_bar">
+              <li><a href="#" class="top_login">LOGIN</a></li>
+              <li><a href="#" class="top_join">JOIN</a></li>
+              <li><a href="#" class="top_language">KOR</a></li>
+            </ul>
+          </div>
+          <div class="logo">
+            <a href="#">
+              <img src="./images/comm/soundwave.png" alt="SOUND WAVE" />
+            </a>
+          </div>
+          <div class="gnb">
+            <div class="top_menu">
+              <ul class="menu_lst">
+                <li class="lst_menu"><a href="#">NOTION</a></li>
+                <li class="lst_menu"><a href="./itemlist.html">CD·DVD</a></li>
+                <li class="lst_menu"><a href="#">GOODS</a></li>
+                <li class="lst_menu"><a href="#">EVENT</a></li>
+              </ul>
+            </div>
+            <div class="top_menber">
+              <ul class="menber_lst">
+                <li class="lst_manber">
+                  <a href="#" class="mypage">
+                    <span class="blind">마이페이지</span>
+                  </a>
+                </li>
+                <li class="lst_manber">
+                  <a href="#" class="search">
+                    <span class="blind">검색</span>
+                  </a>
+                </li>
+                <li class="lst_manber">
+                  <a href="#" class="cart">
+                    <span class="blind">장바구니</span>
+                  </a>
+                </li>
+              </ul>
+            </div>
+          </div>
+        </div>
+      </header>
       <main id="main">
         <section class="inner item_explantion">
           <h2 class="blind">굿즈 이름 및 가격</h2>
@@ -220,6 +279,104 @@
           </button>
         </div>
       </main>
+      <footer id="footer">
+        <div class="inner fooer_gnb">
+          <ul class="gnb_menuone">
+            <li><button class="company">회사소개</button></li>
+            <li><button>이용안내</button></li>
+            <li><button>이메일무단수집거부</button></li>
+          </ul>
+          <ul class="gnb_menutwo">
+            <li><button class="user">개인정보처리방침</button></li>
+            <li><button>이용약관</button></li>
+            <li><button>제휴/도매문의</button></li>
+            <li><button class="fq">F&Q</button></li>
+          </ul>
+        </div>
+        <div class="ft_top">
+          <div class="info_center">
+            <span class="center_tit">CUSTOMER CENTER</span>
+            <div class="center_call">
+              <span class="callcenter">사무실</span>
+              <strong class="callnum">02 - 381 - 3758</strong>
+            </div>
+            <ul class="centertime">
+              <li>MON - FRI 10:00 AM - 05:00 PM</li>
+              <li>LUNCH 12:00 PM - 01:00 PM</li>
+              <li>CLOSED SAT, SUN AND HOLIDAYS</li>
+            </ul>
+          </div>
+          <div class="info_return">
+            <span class="return_tit">RETURN/EXCHAGE</span>
+            <div class="return_adderss">
+              <span class="add_txtreturn"
+                >반품주소 : 경기도 고양시 덕양구 대자동 205-6</span
+              >
+              <span class="add_txtex">
+                교환 및 반품을 원하시는 상품은 반드시 반품 주소로 보내주셔야
+                합니다.
+              </span>
+            </div>
+          </div>
+        </div>
+        <div class="inner ft_bt">
+          <div class="adderss_txtbox">
+            <ul class="adderss_txt">
+              <li class="txtlist">
+                상호명 : 주식회사 사운드웨이브 | 대표 : 어주연 | 사업자등록번호
+                : 121-86-36395<a
+                  href="https://www.ftc.go.kr/www/biz/bizCommList.do?key=5375&searchCnd=wrkr_no&searchKrwd=1218636395"
+                  >[사업자정보확인]</a
+                >
+              </li>
+              <li class="txtlist">
+                통신판매업신고 : 2018-고양덕양구-1367호 | TEL : 02-381-3758 |
+                FAX : 02-381-3788
+              </li>
+              <li class="txtlist">
+                주소 : 경기도 고양시 덕양구 삼송로193번길 1-6 2층
+              </li>
+              <li class="txtlist">
+                개인정보 보호 책임자 : 어주연 | Email :
+                soundwave@sound-wave.co.kr
+              </li>
+            </ul>
+          </div>
+          <div class="footer_img">
+            <ul class="footer_sns">
+              <li class="sns_lst">
+                <a href="https://www.facebook.com/soundwaveee" class="sns_f"
+                  ><span class="blind">페이스북</span></a
+                >
+              </li>
+              <li class="sns_lst">
+                <a href="https://twitter.com/SOUNDWAVE_KOREA" class="sns_t"
+                  ><span class="blind">트위터</span></a
+                >
+              </li>
+              <li class="sns_lst">
+                <a
+                  href="https://www.instagram.com/SOUNDWAVE_KOREA/"
+                  class="instar"
+                  ><span class="blind">인스타그램</span></a
+                >
+              </li>
+            </ul>
+            <ul class="img_wrap">
+              <li class="togo_img">
+                <a href="https://www.hanteo.com/?l=ko&m=false" class="hanteo"
+                  ><span class="blind">한터패밀리</span></a
+                >
+              </li>
+              <li class="togo_img">
+                <a href="#" class="family"
+                  ><span class="blind">패밀리이미지</span></a
+                >
+              </li>
+            </ul>
+          </div>
+        </div>
+      </footer>
     </div>
   </body>
 </html>
