--- a/index.html
+++ b/index.html
@@ -33,6 +33,11 @@
       rel="stylesheet"
     />
     <link
+      rel="stylesheet"
+      type="text/css"
+      href="https://cdn.jsdelivr.net/gh/orioncactus/pretendard/dist/web/static/pretendard.css"
+    />
+    <link
       href="https://fonts.googleapis.com/css?family=Material+Icons|Material+Icons+Outlined|Material+Icons+Round"
       rel="stylesheet"
     />
@@ -260,7 +265,7 @@
           gap: "40px",
           start: 0,
           autoplay: {
-            interval: 250,
+            interval: 300,
             pauseOnHover: {
               resetProgress: true,
             },
@@ -518,7 +523,7 @@
               <h2 class="section-tit mainitem_tit">CD · DVD</h2>
               <ul class="mainitem_tit_mini">
                 <li class="mini_txt active">
-                  <a href="#tab1">국내</a>
+                  <a href="#tab1">국 내</a>
                 </li>
                 <li class="mini_txt">
                   <a href="#tab2">POP</a>
@@ -1366,7 +1371,7 @@
                     src="./images/main/goods_kihyun.jpg"
                     alt="11월을 담은 순간 티셔츠"
                   />
-                  <div class="goods_images_txt">
+                  <div class="goods_images_txt point">
                     <span class="goods_images_tit">기현(KIHYUN)</span>
                     <span class="goods_images_text"
                       >PHOTO EXHIBITION<br />11월을 담은 순간</span
